--- a/package.json
+++ b/package.json
@@ -10,21 +10,26 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "19.0.0",
-    "react-native": "0.79.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-native-vector-icons/ant-design": "^12.3.0",
     "@react-native-vector-icons/entypo": "^12.3.0",
+    "@react-native-vector-icons/ionicons": "^12.3.0",
     "@react-native-vector-icons/material-design-icons": "^12.3.0",
     "@react-native/new-app-screen": "0.80.2",
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
     "axios": "^1.11.0",
+    "dayjs": "^1.11.13",
     "jsencrypt": "^3.5.4",
+    "react": "19.0.0",
+    "react-native": "0.79.0",
     "react-native-css-interop": "^0.1.22",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-image-picker": "^8.2.1",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "^4.0.2",
     "react-native-safe-area-context": "^5.6.0",
@@ -32,14 +37,13 @@
     "react-native-svg": "^15.12.1",
     "react-native-toast-message": "^2.3.3",
     "react-native-vector-icons": "^10.3.0",
+    "react-native-video": "^6.16.1",
     "react-native-webview": "^13.15.0",
     "react-native-worklets": "^0.4.1",
     "react-native-zoom-toolkit": "^5.0.1",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
-    "babel-plugin-module-resolver": "^5.0.2",
-    "jscodeshift": "^0.15.2",
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
@@ -53,8 +57,10 @@
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
     "@types/react-test-renderer": "^19.0.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "jscodeshift": "^0.15.2",
     "prettier": "2.8.8",
     "react-test-renderer": "19.0.0",
     "typescript": "5.0.4"
