--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/geolocation": "^3.4.0",
+    "@react-native-community/hooks": "^100.1.0",
     "@react-native-vector-icons/ant-design": "^12.3.0",
     "@react-native-vector-icons/entypo": "^12.3.0",
     "@react-native-vector-icons/ionicons": "^12.3.0",
@@ -20,6 +21,7 @@
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
+    "@shopify/react-native-skia": "^2.2.8",
     "axios": "^1.11.0",
     "dayjs": "^1.11.13",
     "jsencrypt": "^3.5.4",
@@ -38,8 +40,11 @@
     "react-native-toast-message": "^2.3.3",
     "react-native-vector-icons": "^10.3.0",
     "react-native-video": "^6.16.1",
+    "react-native-vision-camera": "^4.7.1",
+    "react-native-vision-camera-face-detector": "^1.8.8",
     "react-native-webview": "^13.15.0",
     "react-native-worklets": "^0.4.1",
+    "react-native-worklets-core": "^1.6.2",
     "react-native-zoom-toolkit": "^5.0.1",
     "zustand": "^5.0.7"
   },
