--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/geolocation": "^3.4.0",
     "@react-native-community/hooks": "^100.1.0",
@@ -22,17 +23,24 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
     "@shopify/react-native-skia": "^2.2.8",
+    "@sourcetoad/react-native-sketch-canvas": "^2.4.0",
     "axios": "^1.11.0",
+    "buffer": "^6.0.3",
     "dayjs": "^1.11.13",
+    "js-base64": "^3.7.8",
     "jsencrypt": "^3.5.4",
     "react": "19.0.0",
+    "react-hook-form": "^7.62.0",
     "react-native": "0.79.0",
+    "react-native-canvas": "^0.1.40",
     "react-native-css-interop": "^0.1.22",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-paper": "^5.14.5",
+    "react-native-photo-manipulator": "^1.9.2",
     "react-native-reanimated": "^4.0.2",
     "react-native-safe-area-context": "^5.6.0",
     "react-native-screens": "^4.13.1",
@@ -40,12 +48,14 @@
     "react-native-toast-message": "^2.3.3",
     "react-native-vector-icons": "^10.3.0",
     "react-native-video": "^6.16.1",
+    "react-native-view-shot": "^4.0.3",
     "react-native-vision-camera": "^4.7.1",
     "react-native-vision-camera-face-detector": "^1.8.8",
     "react-native-webview": "^13.15.0",
     "react-native-worklets": "^0.4.1",
     "react-native-worklets-core": "^1.6.2",
     "react-native-zoom-toolkit": "^5.0.1",
+    "yup": "^1.7.0",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
@@ -61,6 +71,7 @@
     "@react-native/typescript-config": "0.79.0",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
+    "@types/react-native-canvas": "^0.1.14",
     "@types/react-test-renderer": "^19.0.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
