--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -157,8 +157,13 @@ android {
 }
 
 dependencies {
+
+//    implementation fileTree(includes: ['*.jar'],dir: 'libs')
+//    implementation 'com.amap.api:location:latest.integration'  // ⚡ 高德定位 SDK
     // The version of react-native is set by the React Native Gradle Plugin
+    implementation files('libs/AMap_Location_V6.5.0_20250804.jar')// ⚡ 高德定位 SDK 走本地
     implementation("com.facebook.react:react-android")
+    implementation 'com.google.android.gms:play-services-location:21.3.0'
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
