--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-canvas": "^0.1.40",
     "react-native-css-interop": "^0.1.22",
     "react-native-fs": "^2.20.0",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
