--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/blur": "^4.4.1",
     "@react-native-community/geolocation": "^3.4.0",
     "@react-native-community/hooks": "^100.1.0",
     "@react-native-vector-icons/ant-design": "^12.3.0",
@@ -32,6 +33,7 @@
     "react": "19.0.0",
     "react-hook-form": "^7.62.0",
     "react-native": "0.79.0",
+    "react-native-camera-kit": "^16.1.2",
     "react-native-canvas": "^0.1.40",
     "react-native-css-interop": "^0.1.22",
     "react-native-fs": "^2.20.0",
@@ -42,9 +44,11 @@
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-paper": "^5.14.5",
     "react-native-photo-manipulator": "^1.9.2",
-    "react-native-reanimated": "^4.0.2",
+    "react-native-pressable-opacity": "^1.0.10",
+    "react-native-reanimated": "^4.1.0",
     "react-native-safe-area-context": "^5.6.0",
     "react-native-screens": "^4.13.1",
+    "react-native-static-safe-area-insets": "^2.2.0",
     "react-native-svg": "^15.12.1",
     "react-native-toast-message": "^2.3.3",
     "react-native-vector-icons": "^10.3.0",
@@ -53,7 +57,7 @@
     "react-native-vision-camera": "^4.7.1",
     "react-native-vision-camera-face-detector": "^1.8.8",
     "react-native-webview": "^13.15.0",
-    "react-native-worklets": "^0.4.1",
+    "react-native-worklets": "^0.5.1",
     "react-native-worklets-core": "^1.6.2",
     "react-native-zoom-toolkit": "^5.0.1",
     "yup": "^1.7.0",
