--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-community/hooks": "^100.1.0",
     "@react-native-vector-icons/ant-design": "^12.3.0",
     "@react-native-vector-icons/entypo": "^12.3.0",
+    "@react-native-vector-icons/fontisto": "^12.3.0",
     "@react-native-vector-icons/ionicons": "^12.3.0",
     "@react-native-vector-icons/material-design-icons": "^12.3.0",
     "@react-native/new-app-screen": "0.80.2",
