自动安装了 expo npx install-expo-modules@latest 。并且安装使用了 expo-video ，解决了 在手持设备上的视频显示问题

--- a/app.json
+++ b/app.json
@@ -1,4 +1,13 @@
 {
   "name": "changhu",
-  "displayName": "changhu"
+  "displayName": "changhu",
+  "plugins": [
+    [
+      "expo-video",
+      {
+        "supportsBackgroundPlayback": true, //支持后台播放
+        "supportsPictureInPicture": true //支持画中画
+      }
+    ]
+  ],
 }
