--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "axios": "^1.11.0",
     "buffer": "^6.0.3",
     "dayjs": "^1.11.13",
+    "expo": "~54.0.0",
+    "expo-constants": "~18.0.9",
+    "expo-video": "~3.0.11",
     "js-base64": "^3.7.8",
     "jsencrypt": "^3.5.4",
     "react": "19.1.0",
@@ -77,6 +80,7 @@
     "@types/react-native-canvas": "^0.1.14",
     "@types/react-test-renderer": "^19.1.0",
     "babel-plugin-module-resolver": "^5.0.2",
+    "babel-preset-expo": "~54.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "jscodeshift": "^0.15.2",
