SafeAreaView 、图片全屏 缩放滑动预览、StatusBar状态栏配置、上传文件夹父目录名称替换、依赖替换

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -114,9 +114,9 @@ android {
 dependencies {
 
 
-    //    implementation 'com.amap.api:location:latest.integration'  // ⚡ 高德定位 SDK
+    implementation 'com.amap.api:location:latest.integration'  // ⚡ 高德定位 SDK
     
-    implementation files('libs/AMap_Location_V6.5.0_20250804.jar')// ⚡ 高德定位 SDK 走本地
+    // implementation files('libs/AMap_Location_V6.5.0_20250804.jar')// ⚡ 高德定位 SDK 走本地
     implementation("com.facebook.react:react-android")
     implementation 'com.google.android.gms:play-services-location:21.3.0'
 
