--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-community/blur": "^4.4.1",
     "@react-native-community/hooks": "^100.1.0",
     "@react-native-vector-icons/ant-design": "^12.3.0",
     "@react-native-vector-icons/entypo": "^12.3.0",
@@ -29,7 +28,9 @@
     "buffer": "^6.0.3",
     "dayjs": "^1.11.13",
     "expo": "~54.0.0",
+    "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.9",
+    "expo-linear-gradient": "~15.0.7",
     "expo-video": "~3.0.11",
     "js-base64": "^3.7.8",
     "jsencrypt": "^3.5.4",
@@ -41,7 +42,6 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-image-picker": "^8.2.1",
-    "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.14.5",
     "react-native-photo-manipulator": "^1.9.2",
     "react-native-pressable-opacity": "^1.0.10",
